--- a/HMS/templates/about.html
+++ b/HMS/templates/about.html
@@ -39,27 +39,27 @@
                 <br>
 
                 <div class="row">
-                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 100%;height: 100%;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="card-title text-center">Daniel Olukoya</h5>
+                        <h4 class="card-title text-center">Daniel Olukoya</h4>
                         <p class="card-text text-center">Junior student at Ashesi University. Offering Computer Science.</p>
                       </div>
                     </div>
 
-                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 100%;height: 100%;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="card-title">Yaw Darfour Botwe</h5>
-                        <p class="card-text">Junior student at Ashesi University. Offering Computer Science.</p>
+                        <h4 class="card-title text-center">Yaw Darfour Botwe</h4>
+                        <p class="card-text text-center">Junior student at Ashesi University. Offering Computer Science.</p>
                       </div>
                     </div>
 
-                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12 border-0 bg-transparent" style="width: 100%;height: 100%;">
                       <img class="card-img-top rounded-circle" style="height: 300px" src="/static/img/back3.jpg" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="card-title">Oswald Fiifi Amissah</h5>
-                        <p class="card-text">Junior student at Ashesi University. Offering Management Information Systems.</p>
+                        <h4 class="card-title text-center">Oswald Fiifi Amissah</h4>
+                        <p class="card-text text-center">Junior student at Ashesi University. Offering Management Information Systems.</p>
                       </div>
                     </div>
 
