--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -57,6 +57,41 @@
                 {% block content %}
                 {% endblock %}
             </div>
+            <div class="col-md-4" style="padding-top: 100px">
+                <h3>Announcements</h3>
+                <fieldset class="form-group">
+                    <div class="form-group">
+                        {{ form.subject.label(class="form-control-label") }}
+                        {% if form.subject.errors %}
+                            {{ form.subject(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.subject.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.subject(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.message.label(class="form-control-label") }}
+                            {% if form.message.errors %}
+                                {{ form.message(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.message.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.message(class="form-control form-control-lg") }}
+                            {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-outline-info") }}
+                    </div>
+                </fieldset>
+          </div>
+        </div>
         </div>
     </main>
 
