--- a/HMS/templates/Home.html
+++ b/HMS/templates/Home.html
@@ -15,7 +15,7 @@
   <body class="hbody">
     <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
       <div class="container">
-        <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon">
+        <a href="/"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="{{ url_for('home') }}"> </a>
         <button class="navbar-toggler navbar-dark navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
