--- a/HMS/templates/addroom.html
+++ b/HMS/templates/addroom.html
@@ -54,41 +54,76 @@
     <main role = "main" class="container">
         <div class="row">
             <div class="col-md-9">
-                {% block content %}
-                {% endblock %}
+                <div style="margin-top: 100px; padding: 25px;" >
+                    <form method = "POST" action = "" >
+                        {{form.hidden_tag()}}
+                        <fieldset class = "form-group" >
+                            <legend class = "border-bottom mb-4" > {{legend}} </legend>
+                            <div class="form-group">
+                                {{form.room_num.label(class="form-control-label")}}
+                                {% if form.room_num.errors %}
+                                    {{form.room_num(class="form-control form-control-lg is-invalid")}}
+                                    <div class = "invalid-feedback">
+                                        {% for error in form.room_num.errors %}
+                                            <span> {{error}}</span>
+                                        {%endfor%}
+                                    </div>
+                                {%else%}
+                                    {{form.room_num(class="form-control form-control-lg")}}
+                                {%endif%}
+                            </div>
+                            <div class = "form-group" >
+                                {{form.beds.label(class="form-control-label")}}
+                                {%if form.beds.errors%}
+                                    {{form.beds(class="form-control form-control-lg is-invalid")}}
+                                    <div class = "invalid-feedback">
+                                        {%for error in form.beds.errors%}
+                                            <span> {{error}} </span>
+                                        {%endfor%}
+                                    </div>
+                                {%else%}
+                                    {{form.beds(class="form-control form-control-lg")}}
+                                {% endif%}
+                            </div>
+                        </fieldset>
+                        <div class = "form-group">
+                            {{form.submit(class="btn btn-outline-info")}}
+                        </div>
+                    </form>
+                </div>
             </div>
 
             <div class="col-md-3" style="margin-top: 120px;padding: 20px; background: #E6E6E6;border-radius: 10px;box-shadow: 0 10px 20px rgba(0,0,0,0.2);">
                 <legend class="border-bottom mb-4">Announcements</legend>
                 <fieldset class="form-group">
                     <div class="form-group">
-                        {{ form2.subject.label(class="form-control-label") }}
-                        {% if form2.subject.errors %}
-                            {{ form2.subject(class="form-control form-control-lg is-invalid") }}
+                        {{form2.subject.label(class="form-control-label")}}
+                        {%if form2.subject.errors%}
+                            {{form2.subject(class="form-control form-control-lg is-invalid")}}
                             <div class="invalid-feedback">
-                                {% for error in form2.subject.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
+                                {%for error in form2.subject.errors%}
+                                    <span>{{error}}</span>
+                                {%endfor %}
                             </div>
-                        {% else %}
-                            {{ form2.subject(class="form-control form-control-lg") }}
-                        {% endif %}
+                        {%else%}
+                            {{form2.subject(class="form-control form-control-lg")}}
+                        {%endif%}
                     </div>
                     <div class="form-group">
-                        {{ form2.message.label(class="form-control-label") }}
-                            {% if form2.message.errors %}
-                                {{ form2.message(class="form-control form-control-lg is-invalid") }}
+                        {{form2.message.label(class="form-control-label")}}
+                            {%if form2.message.errors%}
+                                {{form2.message(class="form-control form-control-lg is-invalid")}}
                                 <div class="invalid-feedback">
                                     {% for error in form2.message.errors %}
-                                        <span>{{ error }}</span>
-                                    {% endfor %}
+                                        <span>{{error}}</span>
+                                    {%endfor%}
                                 </div>
-                            {% else %}
-                                {{ form2.message(class="form-control form-control-lg") }}
-                            {% endif %}
+                            {%else%}
+                                {{form2.message(class="form-control form-control-lg")}}
+                            {%endif%}
                     </div>
                     <div class="form-group">
-                        {{ form2.submit(class="btn btn-outline-info") }}
+                        {{form2.submit(class="btn btn-outline-info")}}
                     </div>
                 </fieldset>
           </div>
