--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -53,12 +53,13 @@
 
     <main role = "main" class="container">
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-9" style="margin-top: 120px">
                 {% block content %}
                 {% endblock %}
             </div>
 
-            <div class="col-md-3" style="margin-top: 120px;padding: 20px; background: #E6E6E6;border-radius: 10px;box-shadow: 0 10px 20px rgba(0,0,0,0.2);">
+            <div class="col-md-3" style="margin-top: 120px;padding: 20px; background: #E6E6E6;border-radius: 10px;box-shadow: 0 10px 20px rgba(0,0,0,0.2); width: fit-content;height: 400px">
+
                 <legend class="border-bottom mb-4">Announcements</legend>
                 <fieldset class="form-group">
                     <div class="form-group">
