--- a/HMS/templates/addroom.html
+++ b/HMS/templates/addroom.html
@@ -30,7 +30,7 @@
                     <ul class="navbar-nav ml-auto">
 
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('home')}}">Home</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('admin')}}">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link js-scroll-trigger text-white" href="#">Room Details</a>
