--- a/HMS/templates/editroom.html
+++ b/HMS/templates/editroom.html
@@ -32,6 +32,19 @@
                     {% endif%}
                 </div>
                 <div class = "form-group" >
+                    {{form.price.label(class="form-control-label")}}
+                    {%if form.price.errors%}
+                        {{form.price(class="form-control form-control-lg is-invalid")}}
+                        <div class = "invalid-feedback">
+                            {%for error in form.price.errors%}
+                                <span> {{error}} </span>
+                            {%endfor%}
+                        </div>
+                    {%else%}
+                        {{form.price(class="form-control form-control-lg")}}
+                    {% endif%}
+                </div>
+                <div class = "form-group" >
                     <table class="table table-striped">
                         <thead class="thead-dark">
                             <tr>
