--- a/HMS/templates/addroom.html
+++ b/HMS/templates/addroom.html
@@ -31,7 +31,7 @@
                         {{form.beds(class="form-control form-control-lg")}}
                     {% endif%}
                 </div>
-                <div class = "form-group" >
+                <!--<div class = "form-group" >
                     {{form.gender.label(class="form-control-label")}}
                     {%if form.gender.errors%}
                         {{form.gender(class="form-control form-control-lg is-invalid")}}
@@ -43,7 +43,7 @@
                     {%else%}
                         {{form.gender(class="form-control form-control-lg")}}
                     {% endif%}
-                </div>
+                </div>-->
             </fieldset>
             <div class = "form-group">
                 {{form.submit(class="btn btn-outline-info")}}
